changed image service to the right name

--- a/helm-chart-sources/moja-switch/Chart.yaml
+++ b/helm-chart-sources/moja-switch/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: upi-accountService
+name: moja-switch
 description: A Helm chart for Kubernetes
 icon: https://github.com/darksuei/upi/blob/main/assets/upi_logo.jpeg
 
