--- a/helm-chart-sources/admin-frontend/values.yaml
+++ b/helm-chart-sources/admin-frontend/values.yaml
@@ -1,4 +1,4 @@
-# Default values for account-service.
+# Default values for admin-frontend.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
