--- a/helm-chart-sources/admin-ui/Chart.yaml
+++ b/helm-chart-sources/admin-ui/Chart.yaml
@@ -1,7 +1,6 @@
 apiVersion: v2
-name: moja-switch
+name: upi-admin-ui
 description: A Helm chart for Kubernetes
-icon: https://github.com/darksuei/upi/blob/main/assets/upi_logo.jpeg
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -22,4 +21,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: '1.16.0'
